[project]
name = "markdown2wechat"
version = "0.1.0"
description = "Markdown转公众号格式转换工具"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "markdown>=3.5.1",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.2",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

